--- a/blogs/math/index.html
+++ b/blogs/math/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang=en><head><meta charset=UTF-8><meta name=viewport content="width=device-width,initial-scale=1"><meta http-equiv=X-UA-Compatible content="ie=edge"><meta http-equiv=Accept-CH content="DPR, Viewport-Width, Width"><link rel=icon href=../../fav.png type=image/gif><link href=https://unpkg.com/aos@2.3.1/dist/aos.css rel=stylesheet><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Alata&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"><link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Alata&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" media=print onload='this.media="all"'><noscript><link href="https://fonts.googleapis.com/css2?family=Alata&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel=stylesheet></noscript><link rel=stylesheet href=../../css/font.css media=all><meta property="og:url" content="https://vangotek.github.io/john_hugo/blogs/math/"><meta property="og:title" content="Render Math With Mathjax"><meta property="og:description" content="Mathjax Math equations can be rendered using Mathjax syntax with AMS symbol support.
+<!doctype html><html lang=en><head><meta charset=UTF-8><meta name=viewport content="width=device-width,initial-scale=1"><meta http-equiv=X-UA-Compatible content="ie=edge"><meta http-equiv=Accept-CH content="DPR, Viewport-Width, Width"><link rel=icon href=../../fav.png type=image/gif><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link rel=preload as=style href="https://fonts.googleapis.com/css2?family=Alata&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"><link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Alata&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" media=print onload='this.media="all"'><noscript><link href="https://fonts.googleapis.com/css2?family=Alata&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel=stylesheet></noscript><link rel=stylesheet href=../../css/font.css media=all><meta property="og:url" content="https://vangotek.github.io/john_hugo/blogs/math/"><meta property="og:title" content="Render Math With Mathjax"><meta property="og:description" content="Mathjax Math equations can be rendered using Mathjax syntax with AMS symbol support.
 Optionally enable this on a per-page basis by adding mathjax: true to your frontmatter.
 Then, use $$ ... $$ on a line by itself to render a block equation:
 $$ | Pr_{x \leftarrow P_{1}} [A(x) = 1] - Pr_{x \leftarrow P_{2}} [A(x) = 1] | < \text{negligible} $$
@@ -9,93 +9,93 @@ Then, use $$ ... $$ on a line by itself to render a block equation:
 $$ | Pr_{x \leftarrow P_{1}} [A(x) = 1] - Pr_{x \leftarrow P_{2}} [A(x) = 1] | < \text{negligible} $$
 The raw version is:
 $$ | Pr_{x \leftarrow P_{1}} [A(x) = 1] - Pr_{x \leftarrow P_{2}} [A(x) = 1] | < \text{negligible} $$ Write in-line equations with \\( ... \\) , like \( x^n / y \) . It’s easy!"><link rel=stylesheet href=../../bootstrap-5/css/bootstrap.min.css media=all><link rel=stylesheet href=../../css/header.css media=all><link rel=stylesheet href=../../css/footer.css media=all><link rel=stylesheet href=../../css/custom.css media=all><link rel=stylesheet href=../../css/theme.css media=all><style>:root{--text-color:{
-       {
+        {
         .Site.Params.color.textColor|default "#343a40";
       }
     }
 
     --text-secondary-color: {
-       {
+        {
         .Site.Params.color.secondaryTextColor|default "#6c757d";
       }
     }
 
     --text-link-color: {
-       {
-        .Site.Params.color.textLinkColor|default
-          (.Site.Params.color.primaryColor | default "#007bff");;
+        {
+        .Site.Params.color.textLinkColor|default (.Site.Params.color.primaryColor | default "#007bff");
+        ;
       }
     }
 
     --background-color: {
-       {
+        {
         .Site.Params.color.backgroundColor|default "#eaedf0";
       }
     }
 
     --secondary-background-color: {
-       {
+        {
         .Site.Params.color.secondaryBackgroundColor|default "#64ffda1a";
       }
     }
 
     --primary-color: {
-       {
+        {
         .Site.Params.color.primaryColor|default "#007bff";
       }
     }
 
     --secondary-color: {
-       {
+        {
         .Site.Params.color.secondaryColor|default "#f8f9fa";
       }
     }
 
      
     --text-color-dark: {
-       {
+        {
         .Site.Params.color.darkmode.textColor|default "#e4e6eb";
       }
     }
 
     --text-secondary-color-dark: {
-       {
+        {
         .Site.Params.color.darkmode.secondaryTextColor|default "#b0b3b8";
       }
     }
 
     --text-link-color-dark: {
-       {
-        .Site.Params.color.darkmode.textLinkColor|default
-          (.Site.Params.color.darkmode.primaryColor | default "#ffffff");;
+        {
+        .Site.Params.color.darkmode.textLinkColor|default (.Site.Params.color.darkmode.primaryColor | default "#ffffff");
+        ;
       }
     }
 
     --background-color-dark: {
-       {
+        {
         .Site.Params.color.darkmode.backgroundColor|default "#18191a";
       }
     }
 
     --secondary-background-color-dark: {
-       {
+        {
         .Site.Params.color.darkmode.secondaryBackgroundColor|default "#212529";
       }
     }
 
     --primary-color-dark: {
-       {
+        {
         .Site.Params.color.darkmode.primaryColor|default "#ffffff";
       }
     }
 
     --secondary-color-dark: {
-       {
+        {
         .Site.Params.color.darkmode.secondaryColor|default "#212529";
       }
-    }}body{font-size:var(--font-size);font-weight:var(--font-weight);line-height:var(--line-height);text-align:var(--text-align)}html{background-color:var(--background-color) !important}body::-webkit-scrollbar{height:0;width:8px;background-color:var(--background-color)}::-webkit-scrollbar-track{border-radius:1rem}::-webkit-scrollbar-thumb{border-radius:1rem;background:#b0b0b0;outline:1px solid var(--background-color)}#search-content::-webkit-scrollbar{width:.5em;height:.1em;background-color:var(--background-color)}</style><meta name=description content><link rel=stylesheet href=../../css/single.css><script defer src=../../fontawesome-6/all-6.4.2.js></script><title>Render Math With Mathjax | &lt;Van_Go/></title></head><body class=light><script>let localStorageValue=localStorage.getItem("pref-theme"),mediaQuery=window.matchMedia("(prefers-color-scheme: dark)").matches;switch(localStorageValue){case"dark":document.body.classList.add("dark");break;case"light":document.body.classList.remove("dark");break;default:mediaQuery&&document.body.classList.add("dark");break}</script><script>var prevScrollPos=window.pageYOffset;window.addEventListener("scroll",function(){let s=document.getElementById("profileHeader"),t=window.pageYOffset,n=!1,o=!0,i=o?prevScrollPos>t:t>0;i?s.classList.add("showHeaderOnTop"):n=!0,t===0&&(n=!0),n&&s.classList.remove("showHeaderOnTop"),prevScrollPos=t})</script><header id=profileHeader><nav class="pt-3 navbar navbar-expand-lg animate"><div class="container-fluid mx-xs-2 mx-sm-5 mx-md-5 mx-lg-5"><a class="navbar-brand primary-font text-wrap" href=../../><img src=../../fav.png width=30 height=30 class="d-inline-block align-top">
+    }}body{font-size:var(--font-size);font-weight:var(--font-weight);line-height:var(--line-height);text-align:var(--text-align)}html{background-color:var(--background-color) !important}body::-webkit-scrollbar{height:0;width:8px;background-color:var(--background-color)}::-webkit-scrollbar-track{border-radius:1rem}::-webkit-scrollbar-thumb{border-radius:1rem;background:#b0b0b0;outline:1px solid var(--background-color)}#search-content::-webkit-scrollbar{width:.5em;height:.1em;background-color:var(--background-color)}</style><meta name=description content><link rel=stylesheet href=../../css/single.css><script defer src=../../fontawesome-6/all-6.4.2.js></script><link href=https://unpkg.com/aos@2.3.1/dist/aos.css rel=stylesheet><title>Render Math With Mathjax | &lt;Van_Go/></title></head><body class=light><script>let localStorageValue=localStorage.getItem("pref-theme"),mediaQuery=window.matchMedia("(prefers-color-scheme: dark)").matches;switch(localStorageValue){case"dark":document.body.classList.add("dark");break;case"light":document.body.classList.remove("dark");break;default:mediaQuery&&document.body.classList.add("dark");break}</script><script>var prevScrollPos=window.pageYOffset;window.addEventListener("scroll",function(){let s=document.getElementById("profileHeader"),t=window.pageYOffset,n=!1,o=!0,i=o?prevScrollPos>t:t>0;i?s.classList.add("showHeaderOnTop"):n=!0,t===0&&(n=!0),n&&s.classList.remove("showHeaderOnTop"),prevScrollPos=t})</script><header id=profileHeader><nav class="pt-3 navbar navbar-expand-lg animate"><div class="container-fluid mx-xs-2 mx-sm-5 mx-md-5 mx-lg-5"><a class="navbar-brand primary-font text-wrap" href=../../><img src=../../fav.png width=30 height=30 class="d-inline-block align-top">
 &lt;Van_Go/></a><div><input id=search autocomplete=off class="form-control mr-sm-2 d-none d-md-block" placeholder='Ctrl + k to Search...' aria-label=Search oninput=searchOnChange(event)></div><button class=navbar-toggler type=button data-bs-toggle=collapse data-bs-target=#navbarContent aria-controls=navbarContent aria-expanded=false aria-label="Toggle navigation">
-<svg aria-hidden="true" height="24" viewBox="0 0 16 16" width="24" data-view-component="true"><path fill-rule="evenodd" d="M1 2.75A.75.75.0 011.75 2h12.5a.75.75.0 110 1.5H1.75A.75.75.0 011 2.75zm0 5A.75.75.0 011.75 7h12.5a.75.75.0 110 1.5H1.75A.75.75.0 011 7.75zM1.75 12a.75.75.0 100 1.5h12.5a.75.75.0 100-1.5H1.75z"/></svg></button><div class="collapse navbar-collapse text-wrap primary-font" id=navbarContent><ul class="navbar-nav ms-auto text-center"><li class="nav-item navbar-text d-block d-md-none"><div class=nav-link><input id=search autocomplete=off class="form-control mr-sm-2" placeholder='Ctrl + k to Search...' aria-label=Search oninput=searchOnChange(event)></div></li><li class="nav-item navbar-text"><a class=nav-link href=../../#about aria-label=about>About Me</a></li><li class="nav-item navbar-text"><a class=nav-link href=../../#experience aria-label=experience>Experience</a></li><li class="nav-item navbar-text"><a class=nav-link href=../../#education aria-label=education>Education</a></li><li class="nav-item navbar-text"><a class=nav-link href=../../#projects aria-label=projects>Projects</a></li><li class="nav-item navbar-text"><a class=nav-link href=../../#achievements aria-label=achievements>Achievements</a></li><li class="nav-item navbar-text"><a class=nav-link href=../../#contact aria-label=contact>Contact</a></li></ul></div></div></nav></header><div id=content><section id=single><div class=container><div class="row justify-content-center"><div class="col-sm-12 col-md-12 col-lg-9"><div class=pr-lg-4><div class="title mb-5"><h1 class="text-center mb-4">Render Math With Mathjax</h1><div class=text-center>Gurusabarish
+<svg aria-hidden="true" height="24" viewBox="0 0 16 16" width="24" data-view-component="true"><path fill-rule="evenodd" d="M1 2.75A.75.75.0 011.75 2h12.5a.75.75.0 110 1.5H1.75A.75.75.0 011 2.75zm0 5A.75.75.0 011.75 7h12.5a.75.75.0 110 1.5H1.75A.75.75.0 011 7.75zM1.75 12a.75.75.0 100 1.5h12.5a.75.75.0 100-1.5H1.75z"/></svg></button><div class="collapse navbar-collapse text-wrap primary-font" id=navbarContent><ul class="navbar-nav ms-auto text-center"><li class="nav-item navbar-text d-block d-md-none"><div class=nav-link><input id=search autocomplete=off class="form-control mr-sm-2" placeholder='Ctrl + k to Search...' aria-label=Search oninput=searchOnChange(event)></div></li><li class="nav-item navbar-text"><a class=nav-link href=../../#about aria-label=about>About Me</a></li><li class="nav-item navbar-text"><a class=nav-link href=../../#experience aria-label=experience>Experience</a></li><li class="nav-item navbar-text"><a class=nav-link href=../../#education aria-label=education>Education</a></li><li class="nav-item navbar-text"><a class=nav-link href=../../#projects aria-label=projects>Projects</a></li><li class="nav-item navbar-text"><a class=nav-link href=../../#achievements aria-label=achievements>Achievements</a></li><li class="nav-item navbar-text"><a class=nav-link href=../../#contact aria-label=contact>Contact</a></li><li class="nav-item navbar-text d-none d-lg-block d-xl-block"><div class="nav-link nav-link-sep"></div></li><div class=dropdown-divider></div><li class="nav-item navbar-text"><a class=nav-link href=../../blogs title="Blog posts">Blog</a></li><li class="nav-item navbar-text"><a class=nav-link href=../../gallery title="Blog posts">Gallery</a></li></ul></div></div></nav></header><div id=content><section id=single><div class=container><div class="row justify-content-center"><div class="col-sm-12 col-md-12 col-lg-9"><div class=pr-lg-4><div class="title mb-5"><h1 class="text-center mb-4">Render Math With Mathjax</h1><div class=text-center>Gurusabarish
 <small>|</small>
 Dec 9, 2022
 <span id=readingTime>min read</span></div></div><div class=featured-image><img class="img-fluid mx-auto d-block" src=../../images/mathjax.png alt="Render Math With Mathjax"></div><article class="page-content p-2"><h2 id=mathjax>Mathjax</h2><p>Math equations can be rendered using <a href=https://www.mathjax.org>Mathjax</a> syntax with AMS symbol support.</p><p>Optionally enable this on a per-page basis by adding <code>mathjax: true</code> to your frontmatter.</p><p>Then, use <code>$$ ... $$</code> on a line by itself to render a block equation:</p><p>$$ | Pr_{x \leftarrow P_{1}} [A(x) = 1] - Pr_{x \leftarrow P_{2}} [A(x) = 1] | &lt; \text{negligible} $$</p><p>The raw version is:</p><pre tabindex=0><code>$$ | Pr_{x \leftarrow P_{1}} [A(x) = 1] - Pr_{x \leftarrow P_{2}} [A(x) = 1] | &lt; \text{negligible} $$
@@ -116,4 +116,4 @@ Dec 9, 2022
              extensions: ["AMSmath.js", "AMSsymbols.js"] }
       }
     });
-</script><section id=search-content class=py-2><div class=container id=search-results></div></section><script src=https://unpkg.com/aos@2.3.4/dist/aos.js></script><script>AOS.init()</script></body></html>
+</script><section id=search-content class=py-2><div class=container id=search-results></div></section><script src=https://unpkg.com/aos@2.3.4/dist/aos.js></script><script>AOS.init({duration:800,once:!1,offset:100})</script></body></html>
